# Flip-Flop

./: .gitignore  CMakeLists.txt  README.md
include/project/: MainFrame.h  Program.hpp  Time.hpp
include/widgets/: App.h  MainFrame.h
lib/: .gitkeep
src/: AuctionHouse.cpp  Events.cpp  FindFlips.cpp  Item.cpp  MainFrame.cpp  Program.cpp  ProgramUtilities.cpp  main.cpp
src/project/: Api.cpp  File.cpp  Parse.cpp  ProgramTemplates.cpp  Time.cpp  main.cpp
src/widgets/: App.cpp  MainFrame.cpp
